@@ -13,7 +13,7 @@
 	<fields name="request">
 		<fieldset name="request">
 
-			<field name="id" type="tag"
+			<field name="id" type="tag" custom="deny"
 				description="COM_TAGS_FIELD_SELECT_TAG_DESC"
 				label="COM_TAGS_FIELD_TAG_LABEL"
 				required="true"
@@ -63,7 +63,7 @@
 				<option value="0">JHIDE</option>
 				<option value="1">JSHOW</option>
 			</field>
-	
+
 			<field name="tag_list_show_tag_description" type="list"
 				description="COM_TAGS_SHOW_TAG_DESCRIPTION_DESC"
 				label="COM_TAGS_SHOW_TAG_DESCRIPTION_LABEL"
@@ -112,7 +112,7 @@
 					<option value="modified_time">JGLOBAL_MODIFIED_DATE</option>
 					<option value="publish_up">JGLOBAL_PUBLISHED_DATE</option>
 			</field>
-	
+
 			<field name="tag_list_orderby_direction" type="list"
 				description="JGLOBAL_ORDER_DIRECTION_DESC"
 				label="JGLOBAL_ORDER_DIRECTION_LABEL"
@@ -130,7 +130,7 @@
 				<option value="">JGLOBAL_USE_GLOBAL</option>
 				<option value="0">COM_TAGS_EXCLUDE</option>
 				<option value="1">COM_TAGS_INCLUDE</option>
-			</field>	
+			</field>
 		</fieldset>
 
 		<fieldset name="advanced" label="JGLOBAL_LIST_LAYOUT_OPTIONS">
@@ -155,7 +155,7 @@
 				<option value="0">JHIDE</option>
 				<option value="1">JSHOW</option>
 			</field>
-		
+
 			<field name="show_pagination" type="list"
 				description="JGLOBAL_PAGINATION_DESC"
 				label="JGLOBAL_PAGINATION_LABEL"
@@ -165,7 +165,7 @@
 				<option value="1">JSHOW</option>
 				<option value="2">JGLOBAL_AUTO</option>
 			</field>
-	
+
 			<field name="show_pagination_results" type="list"
 				label="JGLOBAL_PAGINATION_RESULTS_LABEL"
 				description="JGLOBAL_PAGINATION_RESULTS_DESC">
@@ -201,7 +201,7 @@
 				<option value="0">JHIDE</option>
 				<option value="1">JSHOW</option>
 			</field>
-	
+
 		</fieldset>
 	</fields>
 </metadata>
