@@ -158,7 +158,7 @@ abstract class JHtmlTag
 	 *
 	 * @return  void
 	 */
-	public static function ajaxfield($selector='#jform_tags')
+	public static function ajaxfield($selector='#jform_tags', $allowCustom = true)
 	{
 		// Tags field ajax
 		$chosenAjaxSettings = new JRegistry(
@@ -171,5 +171,31 @@ abstract class JHtmlTag
 			)
 		);
 		JHtml::_('formbehavior.ajaxchosen', $chosenAjaxSettings);
+
+		// Allow custom values ?
+		if ($allowCustom)
+		{
+			JFactory::getDocument()->addScriptDeclaration("
+				(function($){
+					$(document).ready(function () {
+						// Method to add tags pressing enter
+						$('" . $selector . "_chzn input').keydown(function(event) {
+							// tag is greater than 3 chars and enter pressed
+							if (this.value.length >= 3 && (event.which === 13 || event.which === 188)) {
+								// Create the option
+								var option = $('<option>');
+								option.text(this.value).val('#new#' + this.value);
+								option.attr('selected','selected');
+								// Add the option an repopulate the chosen field
+								$('" . $selector . "').append(option).trigger('liszt:updated');
+								this.value = '';
+								event.preventDefault();
+							}
+						});
+					});
+				})(jQuery);
+				"
+			);
+		}
 	}
 }
