@@ -28,6 +28,7 @@ $ -> Language fix or change
 
 20-Mar-2013 Jean-Marie Simonet
  # [#30333] *TAGS: Notice when entering 2 tags in a tags menu item. Thanks Roberto
+ # [#30328] AJAX field improvements/fixes. Thanks Roberto
 
 19-Mar-2013 Jean-Marie Simonet
  $ Missing strings in com_tags frontend
